# oauth-app

./: Cargo.toml
app_core/: Cargo.toml
app_core/src/: auth_utils.rs  client_utils.rs  ed25519_key_generator.rs  edcsa_key_generator.rs  jwt.rs  lib.rs  sd_jwt.rs  storage.rs
auth_server/: Cargo.toml
auth_server/src/: auth.rs  auth_middleware.rs  jwt.rs  lib.rs  main.rs  params.rs  storage.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
resource_server/: Cargo.toml
resource_server/src/: lib.rs  main.rs  sd_jwt.rs
verifier_server/: Cargo.toml
verifier_server/src/: main.rs
