[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
serde_json = "1.0"
jsonwebtoken = "8.1"
dotenv = "0.15"
actix-web-httpauth = "0.8"



